--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @user.name %></h1>
 
-<p><%= link_to "View as JSON", user_path(@user, format: 'json') %></p>
+<p><%= link_to "View as JSON", api_v1_user_path(@user) %></p>
 
 <ul>
   <% @posts.each do |post| %>
