--- a/app/views/posts/comments.html.erb
+++ b/app/views/posts/comments.html.erb
@@ -3,7 +3,7 @@
 <ol>
 <% @comments.each do |comment| %>
 <li>
-<%= comment.body %><br />- <%= link_to comment.user.name %>
+<%= comment.body %><br />- <%= link_to comment.user.name, user_path(comment.user.id) %>
 </li>
 <% end %>
 </ul>
