--- a/app/views/posts/comments.html.erb
+++ b/app/views/posts/comments.html.erb
@@ -3,6 +3,7 @@
 <ol>
 <% @comments.each do |comment| %>
 <li>
+  <!-- added user path to broken comment user link -->
 <%= comment.body %><br />- <%= link_to comment.user.name, user_path(comment.user.id) %>
 </li>
 <% end %>
