Changed a ul to an ol

--- a/app/views/posts/comments.html.erb
+++ b/app/views/posts/comments.html.erb
@@ -7,4 +7,5 @@
 <%= comment.body %><br />- <%= link_to comment.user.name, user_path(comment.user.id) %>
 </li>
 <% end %>
-</ul>
+<!-- changed ul to ol -->
+</ol>
